Сделал кеширование ЖК по городам, кв по ЖК и кв по городам
